<resources>
    <string name="app_name">piazza</string>

    <string name="tab_home">Home</string>
    <string name="tab_saved_ads">Saved Ads</string>
    <string name="tab_message">Messages</string>
    <string name="tab_my_ads">My Ads</string>
    <string name="tab_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>